<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/storyPicture"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:transitionName="@string/transition_story_picture"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username"
        style="@style/TextAppearance.Material3.LabelLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:transitionName="@string/transition_username"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/storyPicture"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/user_profile"
        app:layout_constraintTop_toBottomOf="@+id/storyPicture"
        tools:text="John Doe" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/createdAt"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:text="Mon, 23 March 2023" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="@string/transition_user_profile"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/username"
        app:srcCompat="@drawable/ic_account_circle_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>